pod2-nfs-dynamic.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-nfs-pod1
  namespace: nfs-nfs
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - kind-worker2

  containers:
  - name: nginx-app
    image: nginx
    volumeMounts:
    - name: nfs-backed-vol1
      mountPath: /data
  volumes:
  - name: nfs-backed-vol1
    persistentVolumeClaim:
      claimName: pvc2-nfs
