backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-d
  namespace: trip-planner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend 
    spec:
      containers:
        - name: trip-backend
          image: peacedockur/flask-app-k8s-trip-backend-service:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet: 
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '200m'
              memory: '256Mi'

---

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: trip-planner
spec:
  ports:
  - targetPort: 5000
    port: 5000
    protocol: TCP
  selector:
    app: backend
