frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-d
  namespace: trip-planner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: trip-frontend
          image: peacedockur/flask-app-k8s-frontend:latest
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '200m'
              memory: '256Mi'


---

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: trip-planner
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
  selector:
    app: frontend
