ingress-obj.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask-app
  namespace: trip-planner
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80

          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
